Updated Occitan translation
svn path=/trunk/; revision=13942

--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-16 13:18+0000\n"
-"PO-Revision-Date: 2008-03-16 14:30+0100\n"
+"PO-Revision-Date: 2008-03-16 16:00+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -823,21 +823,23 @@ msgstr "Tièra dels tipes x-content/* que se fa una demanda a l'utilizaire "
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:72
 msgid "Maximum handled files in a folder"
-msgstr ""
+msgstr "Nombre maximum de fichièrs gerits dins un repertòri"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:73
 msgid "Maximum image size for thumbnailing"
-msgstr ""
+msgstr "Talha maximala de l'imatge per las miniaturas"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:74
 msgid ""
 "Name of the Nautilus theme to use. This has been deprecated as of Nautilus "
 "2.2. Please use the icon theme instead."
 msgstr ""
+"Nom del tèma Nautilus d'utilizar. Es desconselhat dempuèi Nautilus 2.2. "
+"Veuillez utiliser les thèmes d'icônes à la place."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:75
 msgid "Nautilus handles drawing the desktop"
-msgstr ""
+msgstr "Nautilus gerís la visualizacion del burèu"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:76
 msgid "Nautilus uses the users home folder as the desktop"
@@ -853,7 +855,8 @@ msgstr "Nom d'icòna dels servidors ret"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid "Never prompt or autorun/autostart programs when media is inserted"
-msgstr ""
+msgstr "Jamai demandar o aviar automaticament los programas quand un "
+"supòrt es inserit"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:80
 msgid "Only show folders in the tree side pane"
@@ -883,7 +886,8 @@ msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "Show advanced permissions in the file property dialog"
-msgstr ""
+msgstr "Visualizar las permissions avançadas dins la fenèstra de las "
+"proprietats del fichièr"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "Show folders first in windows"
@@ -920,6 +924,12 @@ msgid ""
 "on a remote server. If set to \"local_only\" then only plays previews on "
 "local file systems. If set to \"never\" then it never previews sound."
 msgstr ""
+"Optimizacion de la velocitat al moment de la previsualizacion d'un fichièr "
+"son quand la mirga es endessús de l'icòna del fichièr. S'es definit a "
+"\"always\", lo son es totjorn jogat, e mai lo fichièr siá sus un "
+"servidor distant. S'es definit a \"local_only\", lo son es jogat "
+"sonque pels sistèmas de fichièrs locals. S'es definit a "
+"\"never\", lo son es jamai jogat."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:97
 msgid ""
@@ -1197,7 +1207,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-autorun.c:1107
 msgid "Choose what application to launch."
-msgstr ""
+msgstr "Causissètz l'aplicacion d'aviar."
 
 #: ../libnautilus-private/nautilus-autorun.c:1116
 #, c-format
@@ -1229,14 +1239,14 @@ msgstr "_Desmontar"
 #. tooltip
 #: ../libnautilus-private/nautilus-clipboard.c:442
 msgid "Cut the selected text to the clipboard"
-msgstr ""
+msgstr "Copar lo tèxt seleccionat dins lo pòrta-papièr"
 
 #. name, stock id
 #. label, accelerator
 #. tooltip
 #: ../libnautilus-private/nautilus-clipboard.c:446
 msgid "Copy the selected text to the clipboard"
-msgstr ""
+msgstr "Copiar lo tèxt seleccionat dins lo pòrta-papièr"
 
 #. name, stock id
 #. label, accelerator
@@ -1559,25 +1569,25 @@ msgstr "Autre ligam cap a %s"
 #: ../libnautilus-private/nautilus-file-operations.c:278
 #, c-format
 msgid "%'dst link to %s"
-msgstr ""
+msgstr "%'dèr ligam cap a %s"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:282
 #, c-format
 msgid "%'dnd link to %s"
-msgstr ""
+msgstr "%'dnd ligam cap a %s"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:286
 #, c-format
 msgid "%'drd link to %s"
-msgstr ""
+msgstr "%'den ligam cap a %s"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:290
 #, c-format
 msgid "%'dth link to %s"
-msgstr ""
+msgstr "%'den ligam cap a %s"
 
 #. Localizers:
 #. * Feel free to leave out the st, nd, rd and th suffix or
@@ -1677,13 +1687,13 @@ msgid "Are you sure you want to permanently delete \"%B\" from the trash?"
 msgstr "Sètz segur que volètz suprimir per totjorn '%B' de l'escobilièr ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1097
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Are you sure you want to permanently delete the %'d selected item from the "
 "trash?"
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
-msgstr "Sètz segur que volètz suprimir per totjorn '%B' de l'escobilièr ?"
+msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1107
 #: ../libnautilus-private/nautilus-file-operations.c:1173
@@ -1708,10 +1718,13 @@ msgid "Are you sure you want to permanently delete \"%B\"?"
 msgstr "Sètz segur que volètz suprimir per totjorn \"%B\" ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1164
-#, fuzzy, c-format
+#, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr "Sètz segur que volètz suprimir per totjorn \"%B\" ?"
+msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element seleccionat ?"
+msgstr[1] ""
+"Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1206
 msgid "Deleting files"
@@ -1720,12 +1733,16 @@ msgstr "Supression de fichièrs"
 #: ../libnautilus-private/nautilus-file-operations.c:1211
 #, c-format
 msgid "%'d file left to delete"
-msgstr ""
+msgid_plural "%'d files left to delete"
+msgstr[0] "Demòra %'d fichièr de suprimir"
+msgstr[1] "Demòra %'d fichièrs de suprimir"
 
 #. To translators: %T will expand to a time like "2 minutes"
 #: ../libnautilus-private/nautilus-file-operations.c:1222
 msgid "%'d file left to delete — %T left"
-msgstr ""
+msgid_plural "%'d file left to delete — %T left"
+msgstr[0] "Demòra %'d fichièr de suprimir - encara %T"
+msgstr[1] "Demòra %'d fichièrs de suprimir - encara %T"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1283
 #: ../libnautilus-private/nautilus-file-operations.c:1316
@@ -2103,7 +2120,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations.c:3412
 #, c-format
 msgid "Couldn't remove the already existing file with the same name in %F."
-msgstr ""
+msgstr "Impossible de suprimir lo fichièr qu'existís ja amb lo meteis nom dins %F."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3466
 #, c-format
@@ -2135,7 +2152,7 @@ msgstr "I a aguda una error al moment de desplaçar lo fichièr dins %F."
 
 #: ../libnautilus-private/nautilus-file-operations.c:4127
 msgid "Creating links in \"%B\""
-msgstr ""
+msgstr "Creacion de ligams dins \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:4131
 #, c-format
@@ -3290,6 +3307,8 @@ msgid ""
 "Choosing a script from the menu will run that script with any selected items "
 "as input."
 msgstr ""
+"Se causissètz un escript dins aqueste menut, serà aviat amb los elements "
+"seleccionats en dintrada."
 
 #: ../src/file-manager/fm-directory-view.c:5399
 msgid ""
@@ -3346,16 +3365,16 @@ msgid "\"%s\" will be copied if you select the Paste command"
 msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà copiat"
 
 #: ../src/file-manager/fm-directory-view.c:5568
-#, fuzzy, c-format
+#, c-format
 msgid "The %'d selected item will be moved if you select the Paste command"
 "The %'d selected items will be moved if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà desplaçat"
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:5575
-#, fuzzy, c-format
+#, c-format
 msgid "The %'d selected item will be copied if you select the Paste command"
 "The %'d selected items will be copied if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà copiat"
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:5669
 #: ../src/file-manager/fm-tree-view.c:972
@@ -3866,7 +3885,7 @@ msgstr "Una mena de rossegada invalida es estada utilizada."
 #. Translator: This is the filename used for when you dnd text to a directory
 #: ../src/file-manager/fm-directory-view.c:8641
 msgid "dropped text.txt"
-msgstr ""
+msgstr "tèxt trach.txt"
 
 #: ../src/file-manager/fm-ditem-page.c:323
 #: ../src/file-manager/fm-ditem-page.c:334
@@ -4080,7 +4099,7 @@ msgstr "Restaurar cada icòna seleccionada a sa talha d'origina"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1434
 msgid "Clean _Up by Name"
-msgstr ""
+msgstr "_Ordenar per nom"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1435
@@ -4091,7 +4110,7 @@ msgstr ""
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1441
 msgid "Compact _Layout"
-msgstr ""
+msgstr "_Disposicion compacta"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1442
@@ -4198,7 +4217,7 @@ msgstr "%s colomnas visiblas"
 
 #: ../src/file-manager/fm-list-view.c:2053
 msgid "Choose the order of information to appear in this folder."
-msgstr ""
+msgstr "Causissètz l'òrdre de las entresenhas visualizadas dins aqueste repertòri."
 
 #. name, stock id
 #. label, accelerator
@@ -4284,7 +4303,7 @@ msgstr "res"
 
 #: ../src/file-manager/fm-properties-window.c:2289
 msgid "unreadable"
-msgstr ""
+msgstr "pas legible"
 
 #: ../src/file-manager/fm-properties-window.c:2299
 #, c-format
@@ -4317,11 +4336,11 @@ msgstr "liure"
 
 #: ../src/file-manager/fm-properties-window.c:3049
 msgid "Total capacity:"
-msgstr ""
+msgstr "Capacitat totala :"
 
 #: ../src/file-manager/fm-properties-window.c:3058
 msgid "Filesystem type:"
-msgstr ""
+msgstr "Mena de sistèma de fichièrs :"
 
 #: ../src/file-manager/fm-properties-window.c:3136
 msgid "Basic"
@@ -4461,7 +4480,7 @@ msgstr "Definir l'ID de l'_utilizaire"
 
 #: ../src/file-manager/fm-properties-window.c:4199
 msgid "Special flags:"
-msgstr ""
+msgstr "Indicadors especials :"
 
 #: ../src/file-manager/fm-properties-window.c:4201
 msgid "Set gro_up ID"
@@ -4698,7 +4717,7 @@ msgstr ""
 #: ../src/nautilus-autorun-software.c:150
 #, c-format
 msgid "Cannot find the autorun program"
-msgstr ""
+msgstr "Impossible de trobar lo programa d'aviada automatica"
 
 #: ../src/nautilus-autorun-software.c:165
 msgid "<big><b>Error autorunning software</b></big>"
@@ -4709,6 +4728,8 @@ msgid ""
 "<big><b>This media contains software intended to be automatically started. "
 "Would you like to run it?</b></big>"
 msgstr ""
+"<big><b>Aqueste supòrt conten un logicial previst per èsser aviat "
+"automaticament. Lo volètz aviar ?</b></big>"
 
 #: ../src/nautilus-autorun-software.c:193
 #, c-format
@@ -4801,7 +4822,7 @@ msgstr "WebDAV segur (HTTPS)"
 
 #: ../src/nautilus-connect-server-dialog.c:204
 msgid "Can't Connect to Server. You must enter a name for the server."
-msgstr ""
+msgstr "Impossible de se connectar al servidor. Debètz picar un nom pel servidor."
 
 #: ../src/nautilus-connect-server-dialog.c:205
 msgid "Please enter a name and try again."
