Updated Occitan translation
svn path=/trunk/; revision=13943

--- a/po/oc.po
+++ b/po/oc.po
@@ -3352,17 +3352,28 @@ msgstr ""
 "\n"
 "NAUTILUS_escript_WINDOW_GEOMETRY : posicion e talha de la fenèstra actuala"
 
-#: ../src/file-manager/fm-directory-view.c:5557
-#: ../src/file-manager/fm-tree-view.c:891
+#: ../src/file-manager/fm-directory-view.c:5568
 #, c-format
-msgid "\"%s\" will be moved if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà desplaçat"
+msgid "The %'d selected item will be moved if you select the Paste command"
+msgid_plural ""
+"The %'d selected items will be moved if you select the Paste command"
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+"desplaçat"
+msgstr[1] ""
+"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
+"desplaçats"
 
 #: ../src/file-manager/fm-directory-view.c:5561
 #: ../src/file-manager/fm-tree-view.c:895
 #, c-format
-msgid "\"%s\" will be copied if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà copiat"
+msgid "The %'d selected item will be copied if you select the Paste command"
+msgid_plural ""
+"The %'d selected items will be copied if you select the Paste command"
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+"copiat"
+msgstr[1] ""
+"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
+"copiats"
 
 #: ../src/file-manager/fm-directory-view.c:5568
 #, c-format
