Updated Occitan translation
svn path=/trunk/; revision=13945

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-16 13:18+0000\n"
+"POT-Creation-Date: 2008-03-16 16:30+0100\n"
 "PO-Revision-Date: 2008-03-16 16:23+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -813,13 +813,14 @@ msgid ""
 "List of x-content/* types where a folder window should be opened on "
 "insertion."
 msgstr ""
-"Tièra dels tipes  x-content/* que cal dobrir una fenèstra de repertòri "
-"a l'insercion."
+"Tièra dels tipes  x-content/* que cal dobrir una fenèstra de repertòri a "
+"l'insercion."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "List of x-content/* where to prompt the user on insertion"
-msgstr "Tièra dels tipes x-content/* que se fa una demanda a l'utilizaire "
-"a l'insercion"
+msgstr ""
+"Tièra dels tipes x-content/* que se fa una demanda a l'utilizaire a "
+"l'insercion"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:72
 msgid "Maximum handled files in a folder"
@@ -855,8 +856,9 @@ msgstr "Nom d'icòna dels servidors ret"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid "Never prompt or autorun/autostart programs when media is inserted"
-msgstr "Jamai demandar o aviar automaticament los programas quand un "
-"supòrt es inserit"
+msgstr ""
+"Jamai demandar o aviar automaticament los programas quand un supòrt es "
+"inserit"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:80
 msgid "Only show folders in the tree side pane"
@@ -886,8 +888,9 @@ msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "Show advanced permissions in the file property dialog"
-msgstr "Visualizar las permissions avançadas dins la fenèstra de las "
-"proprietats del fichièr"
+msgstr ""
+"Visualizar las permissions avançadas dins la fenèstra de las proprietats del "
+"fichièr"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "Show folders first in windows"
@@ -926,10 +929,9 @@ msgid ""
 msgstr ""
 "Optimizacion de la velocitat al moment de la previsualizacion d'un fichièr "
 "son quand la mirga es endessús de l'icòna del fichièr. S'es definit a "
-"\"always\", lo son es totjorn jogat, e mai lo fichièr siá sus un "
-"servidor distant. S'es definit a \"local_only\", lo son es jogat "
-"sonque pels sistèmas de fichièrs locals. S'es definit a "
-"\"never\", lo son es jamai jogat."
+"\"always\", lo son es totjorn jogat, e mai lo fichièr siá sus un servidor "
+"distant. S'es definit a \"local_only\", lo son es jogat sonque pels sistèmas "
+"de fichièrs locals. S'es definit a \"never\", lo son es jamai jogat."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:97
 msgid ""
@@ -940,11 +942,11 @@ msgid ""
 "read preview data."
 msgstr ""
 "Optimizacion de la velocitat al moment de la previsualizacion del contengut "
-"d'un fichièr tèxt dins l'icòna del fichièr. S'es definit a \"always\", "
-"se visualiza totjorn la previsualizacion, e mai lo repertòri siá sus un "
-"servidor distant. S'es definit a \"local_only\", se visualiza la previsualizacion "
-"sonque pels sistèmas de fichièrs locals. S'es definit a \"never\", "
-"las donadas de la previsualizacion son jamai legidas."
+"d'un fichièr tèxt dins l'icòna del fichièr. S'es definit a \"always\", se "
+"visualiza totjorn la previsualizacion, e mai lo repertòri siá sus un "
+"servidor distant. S'es definit a \"local_only\", se visualiza la "
+"previsualizacion sonque pels sistèmas de fichièrs locals. S'es definit a "
+"\"never\", las donadas de la previsualizacion son jamai legidas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:98
 msgid ""
@@ -1697,9 +1699,15 @@ msgstr "Sètz segur que volètz suprimir per totjorn '%B' de l'escobilièr ?"
 msgid ""
 "Are you sure you want to permanently delete the %'d selected item from the "
 "trash?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
-msgstr ""
+msgstr[0] ""
+"Sètz segur que volètz suprimir per totjorn l'element seleccionat de "
+"l'escobilièr ?"
+msgstr[1] ""
+"Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats "
+"de l'escobilièr ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1107
 #: ../libnautilus-private/nautilus-file-operations.c:1173
@@ -1726,9 +1734,13 @@ msgstr "Sètz segur que volètz suprimir per totjorn \"%B\" ?"
 #: ../libnautilus-private/nautilus-file-operations.c:1164
 #, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr "Sètz segur que volètz suprimir per totjorn l'element seleccionat ?"
-"Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats ?"
+msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element"
+"seleccionat ?"
+msgstr[1] ""
+"Sètz segur que volètz suprimir per totjorn los %'d elements"
+"seleccionats ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1206
 msgid "Deleting files"
@@ -1744,7 +1756,7 @@ msgstr[1] "Demòra %'d fichièrs de suprimir"
 #. To translators: %T will expand to a time like "2 minutes"
 #: ../libnautilus-private/nautilus-file-operations.c:1222
 msgid "%'d file left to delete — %T left"
-msgid_plural "%'d file left to delete — %T left"
+msgid_plural "%'d files left to delete — %T left"
 msgstr[0] "Demòra %'d fichièr de suprimir - encara %T"
 msgstr[1] "Demòra %'d fichièrs de suprimir - encara %T"
 
@@ -2124,7 +2136,8 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations.c:3412
 #, c-format
 msgid "Couldn't remove the already existing file with the same name in %F."
-msgstr "Impossible de suprimir lo fichièr qu'existís ja amb lo meteis nom dins %F."
+msgstr ""
+"Impossible de suprimir lo fichièr qu'existís ja amb lo meteis nom dins %F."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3466
 #, c-format
@@ -2161,7 +2174,9 @@ msgstr "Creacion de ligams dins \"%B\""
 #: ../libnautilus-private/nautilus-file-operations.c:4131
 #, c-format
 msgid "Making link to %'d file"
-msgstr ""
+msgid_plural "Making links to %'d files"
+msgstr[0] ""
+msgstr[1] ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:4205
 msgid "Error while creating link to %B."
@@ -2984,7 +2999,9 @@ msgstr ""
 #: ../libnautilus-private/nautilus-progress-info.c:300
 #, c-format
 msgid "%'d file operation active"
-msgstr ""
+msgid_plural "%'d file operations active"
+msgstr[0] ""
+msgstr[1] ""
 
 #: ../libnautilus-private/nautilus-progress-info.c:493
 #: ../libnautilus-private/nautilus-progress-info.c:511
@@ -3335,16 +3352,16 @@ msgid ""
 "\n"
 "NAUTILUS_SCRIPT_WINDOW_GEOMETRY: position and size of current window"
 msgstr ""
-"Totes los fichièrs executables d'aqueste repertòri se visualizaràn dins lo menut "
-"Escripts. Se causissètz un escript dins aqueste menut, serà aviat.\n"
+"Totes los fichièrs executables d'aqueste repertòri se visualizaràn dins lo "
+"menut Escripts. Se causissètz un escript dins aqueste menut, serà aviat.\n"
 "\n"
-"Un escript executat a partir d'un repertòri local recep en paramètre los noms "
-"dels fichièrs seleccionats. Quand es executat a partir d'un repertòri "
+"Un escript executat a partir d'un repertòri local recep en paramètre los "
+"noms dels fichièrs seleccionats. Quand es executat a partir d'un repertòri "
 "distant (per exemple un repertòri situat sus un servidor web o FTP), los "
 "escripts recebon pas cap de paramètre.\n"
 "\n"
-"Dins totes los cases, Nautilus bota las variablas d'environament "
-"seguentas que los escripts pòdon utilizar :\n"
+"Dins totes los cases, Nautilus bota las variablas d'environament seguentas "
+"que los escripts pòdon utilizar :\n"
 "\n"
 "NAUTILUS_escript_SELECTED_FILE_PATHS : camins dels fichièrs seleccionats "
 "separats per linhas novèlas (newline) (sonque pels fichièrs locals)\n"
@@ -3356,22 +3373,37 @@ msgstr ""
 "\n"
 "NAUTILUS_escript_WINDOW_GEOMETRY : posicion e talha de la fenèstra actuala"
 
-#: ../src/file-manager/fm-directory-view.c:5568
+#: ../src/file-manager/fm-directory-view.c:5557
+#: ../src/file-manager/fm-tree-view.c:891
 #, c-format
-msgid "The %'d selected item will be moved if you select the Paste command"
-"The %'d selected items will be moved if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
-"desplaçat"
-"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
-"desplaçats"
+msgid "\"%s\" will be moved if you select the Paste command"
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:5561
 #: ../src/file-manager/fm-tree-view.c:895
 #, c-format
+msgid "\"%s\" will be copied if you select the Paste command"
+msgstr ""
+
+#: ../src/file-manager/fm-directory-view.c:5568
+#, c-format
+msgid "The %'d selected item will be moved if you select the Paste command"
+msgid_plural ""
+"The %'d selected items will be moved if you select the Paste command"
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+"desplaçat"
+msgstr[1] ""
+"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
+"desplaçats"
+
+#: ../src/file-manager/fm-directory-view.c:5575
+#, c-format
 msgid "The %'d selected item will be copied if you select the Paste command"
+msgid_plural ""
 "The %'d selected items will be copied if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
 "copiat"
+msgstr[1] ""
 "Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
 "copiats"
 
@@ -4216,7 +4248,8 @@ msgstr "%s colomnas visiblas"
 
 #: ../src/file-manager/fm-list-view.c:2053
 msgid "Choose the order of information to appear in this folder."
-msgstr "Causissètz l'òrdre de las entresenhas visualizadas dins aqueste repertòri."
+msgstr ""
+"Causissètz l'òrdre de las entresenhas visualizadas dins aqueste repertòri."
 
 #. name, stock id
 #. label, accelerator
@@ -4722,7 +4755,8 @@ msgstr "Impossible de trobar lo programa d'aviada automatica"
 
 #: ../src/nautilus-autorun-software.c:165
 msgid "<big><b>Error autorunning software</b></big>"
-msgstr "<big><b>Error al moment d'executar automaticament lo logicial</b></big>"
+msgstr ""
+"<big><b>Error al moment d'executar automaticament lo logicial</b></big>"
 
 #: ../src/nautilus-autorun-software.c:191
 msgid ""
@@ -4823,7 +4857,8 @@ msgstr "WebDAV segur (HTTPS)"
 
 #: ../src/nautilus-connect-server-dialog.c:204
 msgid "Can't Connect to Server. You must enter a name for the server."
-msgstr "Impossible de se connectar al servidor. Debètz picar un nom pel servidor."
+msgstr ""
+"Impossible de se connectar al servidor. Debètz picar un nom pel servidor."
 
 #: ../src/nautilus-connect-server-dialog.c:205
 msgid "Please enter a name and try again."
@@ -6537,3 +6572,24 @@ msgstr "Definir lo nivèl de zoom de la visualizacion actuala"
 msgid "Network"
 msgstr "Ret"
 
+#~ msgid ""
+#~ "Are you sure you want to permanently delete the %'d selected item?Are you "
+#~ "sure you want to permanently delete the %'d selected items?"
+#~ msgstr ""
+#~ "Sètz segur que volètz suprimir per totjorn l'element seleccionat ?Sètz "
+#~ "segur que volètz suprimir per totjorn los %'d elements seleccionats ?"
+
+#~ msgid ""
+#~ "The %'d selected item will be moved if you select the Paste commandThe "
+#~ "%'d selected items will be moved if you select the Paste command"
+#~ msgstr ""
+#~ "Se seleccionatz la comanda Pegar, l'element seleccionat serà desplaçatSe "
+#~ "seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
+#~ "desplaçats"
+
+#~ msgid ""
+#~ "The %'d selected item will be copied if you select the Paste commandThe "
+#~ "%'d selected items will be copied if you select the Paste command"
+#~ msgstr ""
+#~ "Se seleccionatz la comanda Pegar, l'element seleccionat serà copiatSe "
+#~ "seleccionatz la comanda Pegar, los %'d elements seleccionats seràn copiats"
